--- a/public/Absen.html
+++ b/public/Absen.html
@@ -1,27 +1,17 @@
 <div id="absensi-container" style="max-width:600px; margin:20px auto; text-align:center; font-family:Arial;">
-  <h3>📷 Absensi QR Code</h3>
-  <div id="reader" style="width:100%; max-width:400px; margin:0 auto; border:1px solid #ccc; border-radius:8px;"></div>
-  <p id="scan-status" style="margin-top:10px; font-weight:bold; color:#555;">Status: Siap</p>
-  <button id="start-btn" style="padding:8px 16px; margin:5px; border:none; border-radius:6px; background:#2d89ef; color:white; cursor:pointer;">▶ Mulai Scan</button>
-  <button id="stop-btn" style="padding:8px 16px; margin:5px; border:none; border-radius:6px; background:#e81123; color:white; cursor:pointer;" disabled>⏹ Stop</button>
+  <h3>Absensi QR Code</h3>
+  <div id="reader" style="width:100%; max-width:400px; margin:0 auto;"></div>
+  <p id="scan-status">Status: Siap</p>
 </div>
 
 <script src="https://unpkg.com/html5-qrcode/minified/html5-qrcode.min.js"></script>
 <script>
 (function(){
-  const WEBAPP_URL = "https://script.google.com/macros/s/AKfycbzwEWs1wxvbpe7G77fpan7kmr8YXUY16LwOGATdirQSkTz_B0dIuxZ9FCLPuUJqZDKJgg/exec"; // URL Web App dari Google Apps Script
-  const SECRET_TOKEN = "ABSEN2025-KEY-9F7xQ!";  // Harus sama dengan di Apps Script
+  const WEBAPP_URL = "GANTI_DENGAN_URL_WEBAPP"; // dari deploy Apps Script
+  const SECRET_TOKEN = "ABSEN2025-KEY-9F7xQ!";  // sama dengan Apps Script
 
   const scanStatus = document.getElementById("scan-status");
-  const startBtn = document.getElementById("start-btn");
-  const stopBtn = document.getElementById("stop-btn");
   let lastId = "", lastTime = 0;
-  let qrScanner = null;
-
-  function setStatus(text, color="#555") {
-    scanStatus.innerText = text;
-    scanStatus.style.color = color;
-  }
 
   function sendAbsensi(id){
     fetch(WEBAPP_URL, {
@@ -32,13 +22,13 @@
     .then(r=>r.json())
     .then(res=>{
       if(res.success){
-        setStatus("✔ Tercatat: " + id, "green");
+        scanStatus.innerText = "✔ Tercatat: " + id;
       } else {
-        setStatus("⚠ " + res.error, "orange");
+        scanStatus.innerText = "⚠ " + res.error;
       }
     })
     .catch(err=>{
-      setStatus("❌ Error: " + err, "red");
+      scanStatus.innerText = "❌ Error: " + err;
     });
   }
 
@@ -46,38 +36,20 @@
     const now = Date.now();
     if(decodedText === lastId && (now - lastTime < 3000)) return; // hindari duplikat cepat
     lastId = decodedText; lastTime = now;
-    setStatus("Terdeteksi: " + decodedText, "#2d89ef");
+    scanStatus.innerText = "Terdeteksi: " + decodedText;
     sendAbsensi(decodedText.trim());
   }
 
-  startBtn.onclick = () => {
-    Html5Qrcode.getCameras().then(cams=>{
-      if(cams && cams.length){
-        const camId = cams.find(c=>/back|rear|environment/i.test(c.label))?.id || cams[0].id;
-        qrScanner = new Html5Qrcode("reader");
-        qrScanner.start(camId, {fps:10, qrbox:250}, onScanSuccess);
-        setStatus("🔍 Kamera aktif, silakan scan QR", "#2d89ef");
-        startBtn.disabled = true;
-        stopBtn.disabled = false;
-      } else {
-        setStatus("Kamera tidak ditemukan", "red");
-      }
-    }).catch(err=>{
-      setStatus("Gagal akses kamera: " + err, "red");
-    });
-  };
-
-  stopBtn.onclick = () => {
-    if(qrScanner){
-      qrScanner.stop().then(()=>{
-        setStatus("⏹ Kamera dimatikan", "#555");
-        startBtn.disabled = false;
-        stopBtn.disabled = true;
-      }).catch(err=>{
-        setStatus("Gagal stop kamera: " + err, "red");
-      });
+  Html5Qrcode.getCameras().then(cams=>{
+    if(cams && cams.length){
+      const camId = cams.find(c=>/back|rear|environment/i.test(c.label))?.id || cams[0].id;
+      const qr = new Html5Qrcode("reader");
+      qr.start(camId, {fps:10, qrbox:250}, onScanSuccess);
+    } else {
+      scanStatus.innerText = "Kamera tidak ditemukan";
     }
-  };
+  }).catch(err=>{
+    scanStatus.innerText = "Gagal akses kamera: " + err;
+  });
 })();
 </script>
-
